# fastango

./: .gitignore  .pre-commit-config.yaml  Dockerfile  GUIDE.md  LICENSE  README.md  Structure_Overview.md  alembic.ini  docker-compose.yml  prompt.txt  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: .gitkeep
app/: config.py  database.py  exceptions.py  main.py  middleware.py
app/core/: audit.py  exceptions.py  rate_limit.py  registry.py  responses.py  security.py  storage.py
app/modules/auth/: apps.py  constants.py  models.py  repositories.py  router.py  schemas.py  services.py
app/modules/common/: __init__.py  enums.py  models.py
app/modules/home/: __init__.py  apps.py  constants.py  models.py  repositories.py  router.py  schemas.py  services.py
app/modules/profile/: __init__.py  apps.py  constants.py  models.py  repositories.py  router.py  schemas.py  services.py
tests/: conftest.py
tests/modules/: __init__.py  test_auth.py  test_home_profile.py
